--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-requests==2.26.0
-ratelimiter==1.2.0
-tabulate==0.8.9
-pyunifi==2.21
-termcolor==2.2.0
+requests
+ratelimiter
+tabulate
+pyunifi
+termcolor
